--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "drizzle-orm": "^0.45.1",
     "lucia": "^3.2.2",
     "lucide-react": "^0.562.0",
+    "marked": "^17.0.1",
     "next": "16.1.1",
     "oslo": "^1.2.1",
     "postgres": "^3.4.8",
