feat: landing page minor ui tweaks

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucia": "^3.2.2",
     "lucide-react": "^0.562.0",
     "marked": "^17.0.1",
+    "motion": "^12.26.2",
     "next": "16.1.1",
     "oslo": "^1.2.1",
     "postgres": "^3.4.8",
